<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_picture_header"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType="fitXY"
            android:src="@color/green_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/header_picture" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/img_picture_header"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_detail"
            android:padding="10dp">


            <TextView
                android:id="@+id/tv_hospital_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nama_rumah_sakit"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="@dimen/sp_15"
                android:textStyle="bold"
                android:textIsSelectable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sp_70"
                android:text="@string/address"
                android:textColor="@color/black2"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_hospital_name" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="@dimen/sp_14"
                android:textIsSelectable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_address" />

            <TextView
                android:id="@+id/title_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/region"
                android:textColor="@color/black2"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_address" />

            <TextView
                android:id="@+id/tv_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/region"
                android:textSize="@dimen/sp_14"
                android:textIsSelectable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_region" />

            <TextView
                android:id="@+id/title_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Province"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/black2"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_region" />

            <TextView
                android:id="@+id/tv_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Province"
                android:textSize="@dimen/sp_14"
                android:textIsSelectable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_province" />

            <TextView
                android:id="@+id/title_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Phone"
                android:textSize="@dimen/sp_14"
                android:layout_marginTop="@dimen/dp_16"
                android:textColor="@color/black2"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_province" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Phone"
                android:textSize="@dimen/sp_14"
                android:textIsSelectable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_phone" />

            <ImageView
                android:id="@+id/img_copas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_copas"
                android:layout_marginEnd="@dimen/dp_8"
                app:layout_constraintEnd_toEndOf="@id/tv_phone"
                app:layout_constraintTop_toTopOf="@id/tv_phone"
                app:layout_constraintBottom_toBottomOf="@id/tv_phone"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/text_view_rscov"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_200"
                android:paddingBottom="@dimen/dp_55"
                android:text="@string/rscov"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/green_dark"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_phone" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>