<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_search_height"
        android:layout_marginHorizontal="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginBottom="@dimen/dp_12"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edt_search_main"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_search_height"
            android:autofillHints="@string/search"
            android:background="@drawable/bg_edit_text_search"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingHorizontal="@dimen/dp_16"
            android:textColor="@color/grey_dark"
            android:textColorHint="@color/grey_dark" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_hospitals"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_search"
        tools:listitem="@layout/item_hospital" />


    <ImageView
        android:id="@+id/img_failed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_2"
        android:src="@drawable/image_error"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tv_failed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_search"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_failed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/failed_connect"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/dp_4"
        app:layout_constraintBottom_toTopOf="@id/btn_reload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_failed" />

    <Button
        android:id="@+id/btn_reload"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_24"
        android:background="@drawable/bg_btn_reload"
        android:elevation="@dimen/dp_0"
        android:textAllCaps="false"
        android:textSize="@dimen/sp_12"
        android:paddingVertical="@dimen/dp_2"
        android:layout_marginTop="@dimen/dp_4"
        android:paddingHorizontal="@dimen/dp_4"
        android:text="@string/reload"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_failed" />

    <TextView
        android:id="@+id/tv_no_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/no_data"
        android:textSize="@dimen/sp_12"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/text_input_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        style="@style/AVLoadingIndicatorView"
        app:indicatorName="BallPulseSyncIndicator"
        android:visibility="gone"
        app:indicatorColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_search" />


    <ImageView
        android:id="@+id/img_empty_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image_no_data"
        android:layout_marginBottom="@dimen/dp_2"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/text_input_search"
        app:layout_constraintBottom_toTopOf="@id/tv_empty_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/tv_empty_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/empty_data"
        android:textSize="@dimen/sp_12"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_goneMarginTop="@dimen/dp_2"
        app:layout_constraintTop_toBottomOf="@id/img_empty_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>